main: fix color button

--- a/src/index.html
+++ b/src/index.html
@@ -70,22 +70,27 @@
             <li><a class="clickLikShowButton" href="#">Color button</a></li>
             <li><a class="clickLikShowEndlessSlider" href="#">Endless slider</a></li>
             <li><a class="clickLikShowStudents" href="#">Student sheets</a></li>
-            <li><a href="#"></a>Интро</li>
         </ul>
-        <div class="menu-social">
-            <button><a href="https://twitter.com/ihor_isaiev" target="_blank"><img src="burger/img/twitter.png" alt=""></a>
-            </button>
-            <button><a href="https://www.facebook.com/ISAEVIGORIGOREVICH/" target="_blank"><img
-                    src="burger/img/facebook.png"></a></button>
-            <button><a href="https://vk.com/" target="_blank"><img src="burger/img/vk.png" alt=""></a></button>
-        </div>
+            <div class="menu-social">
+                <button><a href="https://twitter.com/ihor_isaiev" target="_blank"><img src="burger/img/twitter.png" alt=""></a>
+                </button>
+                <button><a href="https://www.facebook.com/ISAEVIGORIGOREVICH/" target="_blank"><img
+                        src="burger/img/facebook.png"></a></button>
+                <button><a href="https://vk.com/" target="_blank"><img src="burger/img/vk.png" alt=""></a></button>
+            </div>
+        <ul class="link-style">
+            <li><a href="https://github.com/Isaev-Igor">Профиль на GitHub</a></li>
+        </ul>
+
+
+
 
     </div>
 </div>
 
 <section class="table">
 
-    <button class="btn-table" id="create">Create table</button>
+    <button class="btn-table">Create table</button>
 
     <div class="table-input">
         <label><input type="text" id="rows">Количество строк</label>
@@ -99,7 +104,7 @@
 
     <button class="color-btn_change button_first">Button 1</button>
     <button class="color-btn_change button_second">Button 2</button>
-    <button class="color-btn_change button_change_text">Button 3</button>
+    <button class="color-btn_change button_third">Button 3</button>
 </section>
 
 <section class="slider">
