main: add function delete rows

--- a/src/index.html
+++ b/src/index.html
@@ -161,6 +161,7 @@
     <div class="students-table">
         <table class="students-table-sheet">
             <tr>
+                <th>check</th>
                 <th>Имя</th>
                 <th>Фамилия</th>
                 <th>Возраст</th>
