--- a/src/index.html
+++ b/src/index.html
@@ -111,13 +111,26 @@
     <button class="color-btn_change button_third">Button 3</button>
 </section>
 
-<section class="slider flag">
+<section class="slider hide flag">
 
-    <div>
+    <div class="slider-show">
 
-        <p>some slider</p>
+        <div>
+            <div class="visibleArea">
+                <div class="newslider" style="left: 0">
+                    <div class="newslide"><img src="endless_slider/img/slide_1.jpeg" alt="1"></div>
+                    <div class="newslide"><img src="endless_slider/img/slide_2.jpeg" alt="2"></div>
+                    <div class="newslide"><img src="endless_slider/img/slide_3.jpeg" alt="3"></div>
+                    <div class="newslide"><img src="endless_slider/img/slide_4.jpeg" alt="4"></div>
+                    <div class="newslide"><img src="endless_slider/img/slide_5.jpeg" alt="5"></div>
+                </div>
 
-    </div>
+
+            </div>
+            <button class="prev" >Назад</button>
+            <button class="next" >Вперед</button>
+
+        </div>
 </section>
 
 <section class="students flag">
