main: add slider class

--- a/src/index.html
+++ b/src/index.html
@@ -122,21 +122,30 @@
 
     <div class="slider-show">
 
-        <div>
-            <div class="visibleArea">
-                <div class="newslider" style="left: 0">
-                    <div class="newslide"><img src="endless_slider/img/slide_1.jpeg" alt="1"></div>
-                    <div class="newslide"><img src="endless_slider/img/slide_2.jpeg" alt="2"></div>
-                    <div class="newslide"><img src="endless_slider/img/slide_3.jpeg" alt="3"></div>
-                    <div class="newslide"><img src="endless_slider/img/slide_4.jpeg" alt="4"></div>
-                    <div class="newslide"><img src="endless_slider/img/slide_5.jpeg" alt="5"></div>
-                </div>
-
-
+        <div class="visibleArea">
+            <div class="newslider1" style="left: 0">
+                <div class="slide1"><img src="endless_slider/img/slide_1.jpeg" alt="1"></div>
+                <div class="slide1"><img src="endless_slider/img/slide_2.jpeg" alt="2"></div>
+                <div class="slide1"><img src="endless_slider/img/slide_3.jpeg" alt="3"></div>
+                <div class="slide1"><img src="endless_slider/img/slide_4.jpeg" alt="4"></div>
+                <div class="slide1"><img src="endless_slider/img/slide_5.jpeg" alt="5"></div>
             </div>
-            <button class="prev">Назад</button>
-            <button class="next">Вперед</button>
+            <div class="btn-slider">
+                <button class="prev"><img src="endless_slider/img/arrow_left.png" alt=""></button>
+                <button class="next"><img src="endless_slider/img/arrow_right.png" alt=""></button>
+            </div>
 
+        </div>
+
+        <div class="spacer"></div>
+        <div class="visibleArea2">
+            <div class="newslider2" style="left: 0px">
+                <div class="slide2"><img src="endless_slider/img/slide_1.jpeg" alt="1"></div>
+                <div class="slide2"><img src="endless_slider/img/slide_2.jpeg" alt="2"></div>
+                <div class="slide2"><img src="endless_slider/img/slide_3.jpeg" alt="3"></div>
+                <div class="slide2"><img src="endless_slider/img/slide_4.jpeg" alt="4"></div>
+                <div class="slide2"><img src="endless_slider/img/slide_5.jpeg" alt="5"></div>
+            </div>
         </div>
     </div>
 </section>
@@ -408,11 +417,7 @@
 </main>
 
 
-    <div class ="map  flag"></div>
-
-
-
-
+<div class="map  flag"></div>
 
 
 <footer class="footer">
